Fixed problem with chart feature border-right not showing.

--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -329,7 +329,7 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 .chart-menu-container.active { visibility: visible; }
 .chart-menu { width: 100%; }
 
-.chart-feature { position: relative; background-color: #fff; margin: 10px; padding: 10px; border: 1px solid #e9e9e9; color: #666; overflow: hidden; max-height: 50px; -webkit-transition: max-height 0.5s ease-out; }
+.chart-feature { position: relative; background-color: #fff; margin: 10px; padding: 10px; outline: 1px solid #e9e9e9; color: #666; overflow: hidden; max-height: 50px; -webkit-transition: max-height 0.5s ease-out; }
 .chart-feature-animate { max-height: 500px; -webkit-transition: max-height 1s ease-in; }
 
 .feature-container { height: 28px; width: 100%; }
